compiler/e2e/test/snapshot/term/generic_parameters/misordered_generic_parameter/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the generic parameter was declared in the wrong order
  ╭─ compiler/e2e/test/snapshot/term/generic_parameters/misordered_generic_parameter/main.pnx:1:35
  │
1 │ public type TypeBeforeLifetime[T, 'a] = &'a T:
  │                                   ^^ can't be declared after type or constant parameters

error: Compilation aborted due to 1 error(s)



stdout:
